--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -46,9 +46,13 @@
 		<div style="height: {{window_height}}px;" layout="row" layout-align="center center">
 			<div layout="row" flex>
 				<div flex="100" layout="row">
+
+
 					<div flex="50" style="background: #fafafa; margin: 0; height: {{window_height}}px; overflow: hidden;">
 						<img style="height: 100%; width: auto;" ng-src="media/GettyImages-515225786.jpg" alt="image caption">
 					</div>
+
+
 					<div layout-padding flex="50">
 						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
 							<md-card-header>
@@ -68,177 +72,52 @@
 							</md-card-footer>
 						</md-card>
 					</div>
+
+
 				</div>
 			</div>
 		</div>
-		<div layout="row" layout-align="center center" class="normal-container" style="background-color: #EEEEEE">
-			<div style="height: 80%; max-height: 80%;" layout="row" layout-padding layout="margin" flex>
-				<div show="layout-gt-md" flex="5"></div>
-				<div flex="90" layout="row">
-					<div layout-padding flex="33">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-604574515.jpg" class="md-card-image" alt="image caption">
-							</div>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
-								</md-card-actions>
-							</md-card-footer>
-						</md-card>
-					</div>
-					<div layout-padding flex="33">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-595969535.jpg" class="md-card-image" alt="image caption">
-							</div>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
-								</md-card-actions>
-							</md-card-footer>
-						</md-card>
-					</div>
-					<div layout-padding flex="33">
-						<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title">Title</span>
-									<span class="md-subhead">Sub header</span>
-								</md-card-header-text>
-							</md-card-header>
-							<div style="max-height: 300px; text-align: center; overflow: hidden;">
-								<img ng-src="media/GettyImages-573105423.jpg" class="md-card-image" alt="image caption">
-							</div>
-							<md-card-footer>
-								<md-card-actions layout="row" layout-align="start center">
-									<md-button>Action 1</md-button>
-									<md-button>Action 2</md-button>
-								</md-card-actions>
-							</md-card-footer>
-						</md-card>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div layout="row" layout-align="center center" class="normal-container">
-			<div style="height: 80%; max-height: 80%;" layout="row" layout-padding layout="margin" flex>
-				<div show="layout-gt-md" flex="5"></div>
-				<div flex="90" layout="row">
-					<div layout-padding flex="50">
-						<md-card style="background: #fafafa; height: 100%;">
-							<div style="max-height: 500px; text-align: center; overflow: hidden">
-								<img ng-src="media/GettyImages-636083442.jpg" style="width: 100%; height: auto" class="md-card-image" alt="Washed Out">
-							</div>
-							<md-card-title>
-								<md-card-title-text>
-									<span class="md-headline">Mock Blog Post</span>
-								</md-card-title-text>
-							</md-card-title>
-							<md-card-content>
-								<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore...
-								</p>
-							</md-card-content>
-							<md-card-actions layout="row" layout-align="end center">
-								<md-button class="md-icon-button" aria-label="Favorite">
-									<md-icon md-colors="::{color: 'background'}">favorite</md-icon>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Settings">
-									<md-icon md-colors="::{color: 'background'}">menu</md-icon>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Share">
-									<md-icon md-colors="::{color: 'background'}">share_arrow</md-icon>
-								</md-button>
-							</md-card-actions>
-						</md-card>
-					</div>
-					<div layout-padding flex="50">
-						<md-card style="background: #fafafa; height: 100%;">
-							<div style="max-height: 500px; text-align: center; overflow: hidden">
-								<img ng-src="media/GettyImages-539234375.jpg" style="width: 100%; height: auto" class="md-card-image" alt="Washed Out">
-							</div>
-							<md-card-title>
-								<md-card-title-text>
-									<span class="md-headline">Mock Blog Post</span>
-								</md-card-title-text>
-							</md-card-title>
-							<md-card-content>
-								<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse...
-								</p>
-							</md-card-content>
-							<md-card-actions layout="row" layout-align="end center">
-								<md-button class="md-icon-button" aria-label="Favorite">
-									<md-icon md-colors="::{color: 'primary'}">favorite</md-icon>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Settings">
-									<md-icon md-colors="::{color: 'primary'}">menu</md-icon>
-								</md-button>
-								<md-button class="md-icon-button" aria-label="Share">
-									<md-icon md-colors="::{color: 'primary'}">share_arrow</md-icon>
-								</md-button>
-							</md-card-actions>
-						</md-card>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: #EEEEEE">
+		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}">
 			<div class="footer-content-top" layout="row" layout-padding flex>
 				<div layout="column" layout-padding layout-align="start center" flex="33">
 					<div flex>
-						<h1 style="font-size: 36px;">Anchor &amp; Sage</h1>
-						<p>9000 Get Started Ln.</p>
-						<p>Dallas, Tx 75024</p>
+						<h1 style="font-size: 36px; color: {{base_hue_lightest.value}};">Anchor &amp; Sage</h1>
+						<p style="color: {{base_hue_lightest.value}};">9000 Get Started Ln.</p>
+						<p style="color: {{base_hue_lightest.value}};">Dallas, Tx 75024</p>
 						<br>
-						<p style="color: #9E9E9E">(800) 255-5252</p>
+						<p style="color: {{base_hue_lightest.value}};">(800) 255-5252</p>
 					</div>
 				</div>
 				<div layout="row" flex="66" layout-align="center center">
 					<div layout-padding flex="33">
 						<md-list>
 							<md-list-item>
-								<p style="font-weight: bold">Products</p>
+								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Products</p>
 							</md-list-item>
 							<md-list-item>
-								<p>Nutrition</p>
+								<p style="color: {{base_hue_lightest.value}};">Nutrition</p>
 							</md-list-item>
 							<md-list-item>
-								<p>Clothing</p>
+								<p style="color: {{base_hue_lightest.value}};">Clothing</p>
 							</md-list-item>
 							<md-list-item>
-								<p>Produce</p>
+								<p style="color: {{base_hue_lightest.value}};">Produce</p>
 							</md-list-item>
 						</md-list>
 					</div>
 					<div layout-padding flex="33">
 						<md-list>
 							<md-list-item>
-								<p style="font-weight: bold">Navigation</p>
+								<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Navigation</p>
 							</md-list-item>
 							<md-list-item>
-								<p>Shop</p>
+								<p style="color: {{base_hue_lightest.value}};">Shop</p>
 							</md-list-item>
 							<md-list-item>
-								<p>Blog</p>
+								<p style="color: {{base_hue_lightest.value}};">Blog</p>
 							</md-list-item>
 							<md-list-item>
-								<p>Social</p>
+								<p style="color: {{base_hue_lightest.value}};">Social</p>
 							</md-list-item>
 						</md-list>
 					</div>
@@ -246,26 +125,26 @@
 						<div layout="row" layout-padding layout-align="start center">
 							<md-list>
 								<md-list-item>
-									<p style="font-weight: bold">Stay Connected</p>
+									<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
 								</md-list-item>
 								<md-list-item>
-									<p>Facebook</p>
+									<p style="color: {{base_hue_lightest.value}};">Facebook</p>
 								</md-list-item>
 								<md-list-item>
-									<p>Twitter</p>
+									<p style="color: {{base_hue_lightest.value}};">Twitter</p>
 								</md-list-item>
 								<md-list-item>
-									<p>Pinterest</p>
+									<p style="color: {{base_hue_lightest.value}};">Pinterest</p>
 								</md-list-item>
 							</md-list>
 						</div>
 					</div>
 				</div>
 			</div>
-			<md-divider style="width: 100%; border-color: #E0E0E0"></md-divider>
+			<md-divider style="width: 100%; border-color: {{base_hue_lightest.value}};"></md-divider>
 			<div class="footer-content-bottom" layout="row" layout-align="center center" layout-padding flex>
 				<div layout-padding layout-align="start center" flex="30">
-					<h1 style="font-size: 18px;">Anchor &amp; Sage</h1>
+					<h1 style="font-size: 18px; color: {{base_hue_lightest.value}};">Anchor &amp; Sage</h1>
 				</div>
 				<div layout-padding flex="70">
 					<div flex layout="row" layout-align="end center">
@@ -273,13 +152,13 @@
 					      	Sign out
 					    </md-button>
 						<div layout-margin>
-							<p>About</p>
+							<p style="color: {{base_hue_lightest.value}};">About</p>
 						</div>
 						<div layout-margin>
-							<p>Privacy &amp; Terms</p>
+							<p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p>
 						</div>
 						<div layout-margin>
-							<h1 style="font-size: 18px;">Superpowered By Lightweight</h1>
+							<h1 style="font-size: 18px; color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
 						</div>
 					</div>
 				</div>
