--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -10,14 +10,14 @@
 		</video>
         <div class="slideshow-content" style="margin-top: 200px; margin-left: 100px; z-index: 1;" flex>
         	<div style="position: relative; max-width: 468px; height: 400px;" layout="row" layout-align="center center" flex>
-	        	<div class="left-bar bar" style="position: absolute; top: 0; left:0; height: 80%; width: 4px;"></div>
+	        	<div class="left-bar bar" style="position: absolute; top: 0; left:-4px; height: 80%; width: 4px;"></div>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
 	                    <h1 style="color: {{base_hue_darkest.value}}; font-size: 56px; line-height: 64px; margin: 0;">A Bold Civil Engineering Firm</h1>
 	                    <p style="color: {{base_hue_darkest.value}}; font-size: 16px;">Helping Reshape North Texas Into America's Greatest Metropolitan Area!</p>
 	                </div>
 	            </div>
-	            <div class="right-bar bar" style="position: absolute; top: 20%; right: 0; height: 80%; width: 4px;"></div>
+	            <div class="right-bar bar" style="position: absolute; top: 20%; right: -4px; height: 80%; width: 4px;"></div>
             </div>
         </div>
 	</div>
