--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -45,8 +45,8 @@
 		
 		<div layout="row" layout-align="center center">
 			<div layout-wrap layout="row" layout-align="start center">
-				<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="30">
-					<md-card class="md-primary" md-whiteframe="-1" style="background: #fafafa; height: 100%;">
+				<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
+					<md-card class="md-whiteframe-2dp" style="background: #fafafa; height: 100%;">
 						<md-card-header>
 							<md-card-header-text>
 								<span class="md-title">Title</span>
