--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -42,32 +42,39 @@
 		<!-- Slideshow -->
 		<div ng-include src="'application/landing/partials/slideshow.html'"></div>
 		<!-- Slideshow -->
-		
-		<div layout="row" layout-align="center center" style="margin-top: 32px; margin-bottom: 32px;">
-			<div layout-wrap layout="row" layout-align="start center">
-				<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
-					<md-card style="background: #fafafa; height: 100%;">
-						<md-card-header>
-							<md-card-header-text>
-								<span class="md-title" style="font-size: 24px;">GIS</span>
-								<span class="md-subhead">
-									<h1 style="color: {{primary_hue_normal.value}}; font-size: 32px; line-height: 64px; margin: 0;">Some Sample Text Here</h1>
-								</span>
-							</md-card-header-text>
-						</md-card-header>
-						<md-card-content>
-							<p>MMA's Engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. </p>
-						</md-card-content>
-						<md-card-footer>
-							<md-card-actions layout="row" layout-align="start center">
-								<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-                    				<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-                    			</md-button>
-							</md-card-actions>
-						</md-card-footer>
-					</md-card>
+
+		<div layout="row" layout-align="center center">
+			<md-card class="md-whiteframe-4dp" style="background: #fafafa; width: 80%;">
+				<div layout="column" layout-align="center center" style="background-color: {{primary_hue_normal.value}};">
+					<h1 style="color: {{base_hue_lightest.value}}; font-size: 32px; line-height: 64px; margin: 0;">Some Sample Text Here</h1>
 				</div>
-			</div>
+				<div layout="row" layout-align="center center" style="margin-top: 32px; margin-bottom: 32px;">
+					<div layout-wrap layout="row" layout-align="start center">
+						<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="40">
+							<md-card style="background: #fafafa; height: 100%;">
+								<md-card-header>
+									<md-card-header-text>
+										<span class="md-title" style="font-size: 24px;">GIS</span>
+										<span class="md-subhead">
+											<h1 style="color: {{primary_hue_normal.value}}; font-size: 32px; line-height: 64px; margin: 0;">Some Sample Text Here</h1>
+										</span>
+									</md-card-header-text>
+								</md-card-header>
+								<md-card-content>
+									<p>MMA's Engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. </p>
+								</md-card-content>
+								<md-card-footer>
+									<md-card-actions layout="row" layout-align="start center">
+										<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+		                    				<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+		                    			</md-button>
+									</md-card-actions>
+								</md-card-footer>
+							</md-card>
+						</div>
+					</div>
+				</div>
+			</md-card>
 		</div>
 		<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}">
 			<div class="footer-content-top" layout="row" layout-padding flex>
