--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -107,29 +107,30 @@
 
 		<!--  -->
 		<style>
+			img.image-scale {transform: scale(1);}
 			img.hover {
-			    -webkit-animation: fadeinout 3s ease-in-out forwards;
-			    animation: hoverScale 3s ease-in-out forwards;
+			    -webkit-animation: hoverScale 1s ease-in-out forwards;
+			    animation: hoverScale 1s ease-in-out forwards;
 			    animation-timing-function: ease-in-out; 
 			    -webkit-animation-timing-function: ease-in-out;
 			}
 			@-webkit-keyframes hoverScale {
-				0% {}
+				0% {transform: scale(1);}
 				100% {transform: scale(1.2);}
 			}
 			@keyframes hoverScale {
-				0% {}
+				0% {transform: scale(1);}
 				100% {transform: scale(1.2);}
 			}
 		</style>
-		<div layout="row" layout-align="center center" ng-init="hovered = false">
+		<div layout="row" layout-align="center center" ng-init="hovered = false" layout-wrap>
 			<md-card ng-repeat="item in [1,2,3,4,5,6,7,8]" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" layout="column" layout-align="center center" flex="25" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{primary_hue_normal.value}}; position: relative; text-align: center;">
 				<h1 style="z-index: 2; color: {{base_hue_lightest.value}};">MEDICAL OFFICES</h1>
 				<p style="z-index: 2; color: {{base_hue_lightest.value}};">City of Arlington, TX</p>
-				<md-button ng-show="hovered" class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; z-index: 2;">
+				<md-button class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; z-index: 2;">
 					<md-icon style="color: {{primary_hue_normal.value}};">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
 				</md-button>
-				<img ng-class="{'hover': hovered == true}" ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out" style="position: absolute; top: 0; left: 0; opacity: .3; min-height: 100%; min-width: 100%; z-index: 1;">
+				<img ng-class="{'hover': hovered == true}" ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image image-scale" alt="Washed Out" style="position: absolute; top: 0; left: 0; opacity: .3; min-height: 100%; min-width: 100%; z-index: 1;">
 			</md-card>
 		</div>
 		<!--  -->
