--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -8,7 +8,7 @@
 
 			<div layout-align="center center" layout="row" layout flex>
 
-				<div flex-gt-sm="33" layout-align="start center" layout="row">
+				<div flex-gt-sm="33" layout-align="center center" layout="row">
 					<img src="media/logo.png" style="max-height: 48px;">
 				</div>
 
@@ -78,6 +78,7 @@
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px;">
 			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
+				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
 						<div layout-padding ng-repeat="items in [1,2,3,4,5]" flex="33">
@@ -106,15 +107,47 @@
 		<!--  -->
 
 		<!--  -->
-		<div layout="row" layout-align="center center" ng-init="hovered = false" layout-wrap>
-			<md-card ng-repeat="item in [1,2,3,4,5,6,7,8]" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" layout="column" layout-align="center center" flex="25" style="margin: 0; min-height: 400px; overflow: hidden; background-color: {{base_hue_darker.value}}; position: relative; text-align: center;">
-				<h1 style="z-index: 2; color: {{base_hue_lightest.value}};">MEDICAL OFFICES</h1>
-				<p style="z-index: 2; color: {{base_hue_lightest.value}};">City of Arlington, TX</p>
-				<md-button class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; z-index: 2;">
-					<md-icon style="color: {{primary_hue_normal.value}};">keyboard_arrow_right</md-icon>View Gallery&nbsp;&nbsp;
-				</md-button>
-				<img ng-src="media/hedgcoxe-medical-office(3).jpg" class="md-card-image" alt="Washed Out" style="position: absolute; top: 0; left: 0; opacity: .5; min-height: 100%; min-width: 100%; z-index: 1;">
-			</md-card>
+		<div layout="row" layout-align="center center" layout-wrap>
+			<div flex="100" layout="row" layout-align="center center" style="background-color: {{base_hue_lighter.value}}; z-index: 2">
+				<div layout-wrap layout="row" layout-align="start center">
+					<div flex="33" layout="column" layout-align="center center">
+						<md-card style="background: transparent; height: 100%;">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 24px; font-weight: bold;">WHAT ARE WE DOING?</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darkest.value}};">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
+							</md-card-content>
+						</md-card>
+					</div>
+					<div layout-padding flex="33">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+							</md-card-content>
+						</md-card>
+					</div>
+					<div layout-padding flex="33">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
+							<md-card-header>
+								<md-card-header-text>
+									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+								</md-card-header-text>
+							</md-card-header>
+							<md-card-content>
+								<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
+							</md-card-content>
+						</md-card>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!--  -->
 
