--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -77,7 +77,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" style="padding-top: 64px; padding-bottom: 64px;">
-			<md-card layout="row" layout-align="center center" style="background: {{primary_hue_normal.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
+			<md-card layout="column" layout-align="center center" style="background: {{base_hue_lightest.value}}; width: 80%; z-index: 2; overflow: hidden; position: relative;">
 				<h1 style="color: {{base_hue_darkest.value}}; font-size: 32px; line-height: 64px; margin: 0; font-weight: bold;">OUR CORE SERVICES</h1>
 				<div flex="100" layout="row" layout-align="center center" style="background-color: #fafafa; z-index: 2">
 					<div layout-wrap layout="row" layout-align="start center">
@@ -125,6 +125,7 @@
 					<div layout-padding flex="33">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
 							<md-card-header>
+								<img ng-cloak src="media/state-thomas7.jpg" class="md-card-image">
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
 								</md-card-header-text>
@@ -136,6 +137,7 @@
 					</div>
 					<div layout-padding flex="33">
 						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
+							<img ng-cloak src="media/hedgcoxe-medical-offic(3).jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
