--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -108,7 +108,7 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="100" layout="row" layout-align="center center" style="background-color: {{base_hue_lighter.value}}; z-index: 2">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(224,224,224,.1); z-index: 2">
 				<div layout-wrap layout="row" layout-align="start center">
 					<div flex="33" layout="column" layout-align="center center">
 						<md-card style="background: transparent; height: 100%;">
@@ -123,7 +123,7 @@
 						</md-card>
 					</div>
 					<div layout-padding flex="33">
-						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
@@ -137,7 +137,7 @@
 					</div>
 					<div layout-padding flex="33">
 						<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
-						<md-card style="background: {{base_hue_lightest.value}}; height: 100%;">
+						<md-card style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<md-card-header>
 								<md-card-header-text>
 									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
