--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -108,31 +108,33 @@
 
 		<!--  -->
 		<div layout="row" layout-align="center center" layout-wrap>
-			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(224,224,224,.2); z-index: 2">
+			<div flex="100" layout="row" layout-align="center center" style="background-color: rgba(250,250,250,.2); z-index: 2">
 				<div layout-wrap layout="row" layout-align="start center" flex="80">
-					<div flex="33" layout="column" layout-align="start center">
-						<md-card style="background: transparent; height: 100%;">
-							<md-card-header>
-								<md-card-header-text>
-									<span class="md-title" style="font-size: 24px; font-weight: bold;">WHAT ARE WE DOING?</span>
-								</md-card-header-text>
-							</md-card-header>
-							<md-card-content>
-								<p style="color: {{base_hue_darkest.value}};">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
-							</md-card-content>
-							<md-card-actions layout="row" layout-align="start center">
-								<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-            						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
-            					</md-button>
-							</md-card-actions>
-						</md-card>
+					<div flex="33">
+						<div layout="column" layout-align="start center">
+							<md-card style="background: transparent; height: 100%;">
+								<md-card-header>
+									<md-card-header-text>
+										<span class="md-title" style="font-size: 24px; font-weight: bold;">WHAT ARE WE DOING?</span>
+									</md-card-header-text>
+								</md-card-header>
+								<md-card-content>
+									<p style="color: {{base_hue_darkest.value}};">MMA's engineering team utilizes their extensive land development experience to help our clients secure all the entitlements required for a successful development in timely and efficient manner. We work with the client from concept to construction, integrating all disciplines to effectively manage the total project life cycle. The mma Engineering team excels at delivering technically correct, cost-effective designs. We take pride in providing personalized service to our clients, adapting to their needs and schedule.</p>
+								</md-card-content>
+								<md-card-actions layout="row" layout-align="start center">
+									<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	            						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+	            					</md-button>
+								</md-card-actions>
+							</md-card>
+						</div>
 					</div>
 					<div layout-padding flex="33">
 						<md-card class="md-whiteframe-2dp" style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0;">
 							<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
-									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">BOOMING ENTERTAINMENT DEVELOPMENT</span>
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
@@ -145,7 +147,7 @@
 							<img ng-cloak src="media/arlington-highlands1.jpg" class="md-card-image">
 							<md-card-header>
 								<md-card-header-text>
-									<span class="md-title" style="font-size: 24px; font-weight: bold;">GIS</span>
+									<span class="md-title" style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">ARLINGTON HIGHLANDS, A PART OF GROWING SOUTH ARLINGTON</span>
 								</md-card-header-text>
 							</md-card-header>
 							<md-card-content>
