--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -178,8 +178,8 @@
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}};">local_play</md-icon>
 	                    					</md-button>
 										</md-card-content>
 									</md-card>
@@ -193,8 +193,8 @@
 										</md-card-header>
 										<md-card-content>
 											<p style="color: {{base_hue_darkest.value}};">MMA's Engineering team utilizes their extensive land development experience.</p>
-											<md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
-	                    						<md-icon style="color: {{base_hue_lightest.value}}">keyboard_arrow_right</md-icon>Learn More&nbsp;&nbsp;
+											<md-button class="md-raised md-fab" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">
+	                    						<md-icon style="color: {{base_hue_lightest.value}}">local_dining</md-icon>
 	                    					</md-button>
 										</md-card-content>
 									</md-card>
